# cpp-cicd-app

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: deploy.yml  integration.yml
src/: main.cpp
tests/: test_math.cpp
